# istqb-game

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1c87bb9930db_create_users_table.py
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py
backend/app/models/: __init__.py  user.py
backend/app/schemas/: auth.py
frontend/: README.md  package-lock.json  package.json
