[project]
name = "istqb-game-backend"
version = "0.1.0"
description = "Backend API for the ISTQB Study Game"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.1",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = []
